# Hoho-Video-Station

./:  Changelog.md   Changelog.txt  CMakeLists.txt  Changelog.md  MySQLPool.hpp  README.md  config.h  config.json  everyday.txt  main.cpp  upload_videos.cpp  upload_videos.hpp
example/common/: server_certificate.hpp
src/: main.cpp
src/core/: TaskGroup.cpp  TaskGroup.hpp
src/database/: Database.cpp  Database.hpp
src/handlers/: Handler.h  LoginHandler.cpp  LoginHandler.hpp  RegisterHandler.cpp  RegisterHandler.hpp  UploadHandler.cpp  UploadHandler.hpp  VideoHandler.cpp  VideoHandler.hpp
src/utils/: MimeType.cpp  MimeType.hpp  PathCat.cpp  PathCat.hpp
web/: index.html  login.html  main.html  register.html  upload.html  upload.js
